Writing #313 - `TypedRoute` and `TypedBody`

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -1,5 +1,6 @@
-// import Alert from '@mui/material/Alert';
-// import Stack from '@mui/material/Stack';
+import Alert from '@mui/material/Alert';
+import AlertTitle from '@mui/material/AlertTitle';
+import Stack from '@mui/material/Stack';
 
 # Setup
 ## Boilerplate
@@ -72,8 +73,9 @@ At last, configure `npm run prepare` command like above.
 
 Of course, you've to run the `npm run prepare` command after configuration.
 
-{/* <Alert severity="info">
-Do you feel manual setup is so difficult? 
-
-Then just use the [Setup Wizard](#setup-wizard).
-</Alert> */}
+<br/>
+<Stack>
+    <Alert severity="warning">
+If manual setup is difficult, just use the [Setup Wizard](#setup-wizard).
+    </Alert>
+</Stack>
