--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,3 +1,6 @@
+import Alert from '@mui/material/Alert';
+import Stack from '@mui/material/Stack';
+
 <meta http-equiv="refresh" content="0; url=/docs" />
 
 ## Outline
@@ -43,7 +46,8 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
   - `@nestia/migrate`: Convert `swagger.json` to NestJS project
   - `nestia`: just CLI (command line interface) tool
 
-{/* <Stack spacing={1}>
+<br/>
+<Stack spacing={1}>
     <Alert severity="warning">
         Only **one line** required, with pure TypeScript type
     </Alert>
@@ -56,7 +60,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     <Alert severity="error">
         SDK is almost same with [tRPC](https://trpc.io), but much advanced
     </Alert>
-</Stack> */}
+</Stack>
 
 ![SDK](https://user-images.githubusercontent.com/13158709/215004990-368c589d-7101-404e-b81b-fbc936382f05.gif)
 
