--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -1,3 +1,6 @@
+import Alert from '@mui/material/Alert';
+import Stack from '@mui/material/Stack';
+
 ## Outline
 
 <span style={{ display: "flex", flexDirection: "row" }}>
@@ -38,10 +41,11 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
 
   - `@nestia/core`: super-fast decorator
   - `@nestia/sdk`: evolved SDK and Swagger generator
-  - `@nestia/migrate`: Convert `swagger.json` to NestJS project
+  - `@nestia/migrate`: convert `swagger.json` to NestJS project
   - `nestia`: just CLI (command line interface) tool
 
-{/* <Stack spacing={1}>
+<br/>
+<Stack spacing={1}>
     <Alert severity="warning">
         Only **one line** required, with pure TypeScript type
     </Alert>
@@ -54,7 +58,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     <Alert severity="error">
         SDK is almost same with [tRPC](https://trpc.io), but much advanced
     </Alert>
-</Stack> */}
+</Stack>
 
 ![SDK](https://user-images.githubusercontent.com/13158709/215004990-368c589d-7101-404e-b81b-fbc936382f05.gif)
 
