--- a/website/pages/docs/core/TypedBody.mdx
+++ b/website/pages/docs/core/TypedBody.mdx
@@ -1,6 +1,4 @@
 import { Tabs, Tab } from 'nextra-theme-docs'
-import Alert from '@mui/material/Alert';
-import AlertTitle from '@mui/material/AlertTitle';
 
 # `TypedBody`
 ## Outline
@@ -10,11 +8,11 @@ export function TypedBody(): ParameterDecorator;
 
 Request body decorator **20,000x** faster, even **easy to use**.
 
-`TypedBody()` is a decorator function parsing `application/json` typed request body, and validates the request body value type through [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function. If the request body is not following the promised type, 400 bad request error would be thrown.
+`@TypedBody()` is a decorator function parsing `application/json` typed request body, and validates the request body value type through [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function. If the request body is not following the promised type, 400 bad request error would be thrown.
 
 It is almost same with original `@Body()` function of `NestJS`, however, 20,000x faster. 
 
-Also, `TypedBody()` is much more easier to use than `class-validator`, because it can use pure TypeScript type. If you can't understand the word "pure TypeScript type", then move to below [**#How to use**](#how-to-use) section and read the `IBbsArticle.IUpdate` interface type. You may understand what it means.
+Also, `@TypedBody()` is much more easier to use than `class-validator`, because it can use pure TypeScript type. If you can't understand the word "pure TypeScript type", then move to below [**#How to use**](#how-to-use) section and read the `IBbsArticle.IUpdate` interface type. You may understand what it means.
 
 
 
@@ -174,23 +172,33 @@ exports.BbsArticlesController = BbsArticlesController;
     </Tab>
 </Tabs>
 
-Just call `TypedBody()` function on the request body property, that's all.
+Just call `@TypedBody()` function on the request body property, that's all.
 
-`Nestia` will analyze your type (`IBbsArticle.IUpdate`), and writes optimal validation code for the target type, in the compilation level. If you click the "Complied JavaScript File" tab of above, you can see the optimal validation code. 
+`Nestia` will analyze your type (`IBbsArticle.IUpdate`), and writes optimal code for the target type, in the compilation level. If you click the "Complied JavaScript File" tab of above, you can see the optimal validation code. 
 
-Such optimization is called AOT (Ahead of Time) compilation, and it is the secret of `TypedBody`.
-
-
+Such optimization is called AOT (Ahead of Time) compilation, and it is the secret of `@TypedBody`.
 
 
-## Performance
+
+
+## Benchmark
 Super-fast and super-safe.
 
-For reference, `Netia` utilizes [typia](https://typia.io/docs/), and `NestJS` uses `class-validator`, and `typia` is maximum 20,000x faster than `class-validator` of `NestJS`. Furthermore, beside other libraries can't validate complicate union types, `typia` can validate every TypeScript types.
+`Netia` utilizes [typia](https://typia.io/docs/), and `NestJS` uses `class-validator`. One thing amazing is, `typia` is maximum 20,000x faster than `class-validator` of `NestJS`. Color of `class-transformer` is skyblue, and can you find the skyblue color in the below benchmark graph? It may hard to find because `class-validator` is extremely slow.
 
 ![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/assert.svg)
 
 > Measured on [Intel i5-1135g7, Surface Pro 8](https://github.com/samchon/typia/tree/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz#assert)
+
+Furthermore, while other libraries can't validate complicate union types, `typia` can validate every TypeScript types. However, in the `class-validator` case, it always be failed when any type of complicate comes. I can't understand why `NestJS` has adopted such slow and unstable library.
+
+Moreover, only `typia` can utilize pure TypeScript type, without any extra schema definition. Beside, all of other libraries require extra and duplicated schema definition, different with pure TypeScript type. `Nestia` is using such wonderful, super-fast and super-fast `typia` library.
+
+  - `TypeBox` requires [`TypeBox` schema](https://github.com/samchon/typia/blob/master/benchmark/structures/typebox/TypeboxObjectHierarchical.ts)
+  - `ajv` requires [JSON schema definition](https://github.com/samchon/typia/blob/master/test/schemas/json/swagger/ObjectHierarchical.json)
+  - `io-ts` requires [`io-ts` schema](https://github.com/samchon/typia/blob/master/benchmark/structures/io-ts/IoTsObjectHierarchical.ts)
+  - `zod` requires [`zod` schema](https://github.com/samchon/typia/blob/master/benchmark/structures/zod/ZodObjectHierarchical.ts)
+  - `class-validator` requires [DTO class with decorator function calls](https://github.com/samchon/typia/blob/master/benchmark/structures/class-validator/ClassValidatorObjectHierarchical.ts)
 
 Components               | `typia` | `TypeBox` | `ajv` | `io-ts` | `zod` | `C.V.`
 -------------------------|--------|-----------|-------|---------|-------|------------------
