--- a/website/pages/docs/core/TypedParam.mdx
+++ b/website/pages/docs/core/TypedParam.mdx
@@ -1,3 +1,5 @@
+import { Tabs, Tab } from 'nextra-theme-docs'
+
 # `TypedParam`
 ## Outline
 ```typescript filename="@nestia/core"
@@ -8,28 +10,47 @@ export function TypedParam(
 ): ParameterDecorator;
 ```
 
-## How to use
-```typescript filename="ParametersController.ts"
-import { TypedRoute, TypedParam } from "@nestia/core";
-import { Controller } from "@nestjs/common";
+Type safe path parameter decorator.
 
+`@TypedParam()` is a decorator parsing path parameter. 
+
+It's almost same with original `@Param()` function of `NestJS`, however, `@TypedParam()` is more type safe. 
+
+As `@TypedParam()` can anlayze source code in the compilation level, it can specify parameter type by itself. Also, while `NestJS` cannot distinguish `nullable` type and consider every parameter value as a `string` type, `@TypedParam()` can do it. Furthermore, `@TypedParam()` provides special type `"uuid"`.
+
+Let's read below example code, and see how `@TypedParam()` works.
+
+
+
+
+## How to use
+<Tabs 
+    items={[
+        <code>ParametersController.ts</code>, 
+        'Compiled JavaScript File']}
+>
+    <Tab>
+```typescript copy filename="ParametersController.ts" showLineNumbers {8, 15, 22}
+import { TypedParam } from "@nestia/core";
+import { Controller, Get } from "@nestjs/common";
+ 
 @Controller("parameters")
 export class ParametersController {
-    @TypedRoute.Get("number")
+    @Get("number")
     public async number(
-        @TypedParam("value") value: number,
-    ): Promise<number> {
+        @TypedParam("value") value: number | null,
+    ): Promise<number | null> {
         return value;
     }
-
-    @TypedRoute.Get("string")
+ 
+    @Get("string")
     public async string(
         @TypedParam("value") value: string,
     ): Promise<string> {
         return value;
     }
-
-    @TypedRoute.Get("uuid")
+ 
+    @Get("uuid")
     public async uuid(
         @TypedParam("value", "uuid") value: string
     ): Promise<string> {
@@ -37,5 +58,105 @@ export class ParametersController {
     }
 }
 ```
+    </Tab>
+    <Tab>
+```javascript filename="ParametersController.js" showLineNumbers {46, 53, 60}
+"use strict";
+var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
+    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
+    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
+    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
+    return c > 3 && r && Object.defineProperty(target, key, r), r;
+};
+var __metadata = (this && this.__metadata) || function (k, v) {
+    if (typeof Reflect === "object" && typeof Reflect.metadata === "function") return Reflect.metadata(k, v);
+};
+var __param = (this && this.__param) || function (paramIndex, decorator) {
+    return function (target, key) { decorator(target, key, paramIndex); }
+};
+var __awaiter = (this && this.__awaiter) || function (thisArg, _arguments, P, generator) {
+    function adopt(value) { return value instanceof P ? value : new P(function (resolve) { resolve(value); }); }
+    return new (P || (P = Promise))(function (resolve, reject) {
+        function fulfilled(value) { try { step(generator.next(value)); } catch (e) { reject(e); } }
+        function rejected(value) { try { step(generator["throw"](value)); } catch (e) { reject(e); } }
+        function step(result) { result.done ? resolve(result.value) : adopt(result.value).then(fulfilled, rejected); }
+        step((generator = generator.apply(thisArg, _arguments || [])).next());
+    });
+};
+Object.defineProperty(exports, "__esModule", { value: true });
+exports.ParametersController = void 0;
+const core_1 = require("@nestia/core");
+const common_1 = require("@nestjs/common");
+let ParametersController = class ParametersController {
+    number(value) {
+        return __awaiter(this, void 0, void 0, function* () {
+            return value;
+        });
+    }
+    string(value) {
+        return __awaiter(this, void 0, void 0, function* () {
+            return value;
+        });
+    }
+    uuid(value) {
+        return __awaiter(this, void 0, void 0, function* () {
+            return value;
+        });
+    }
+};
+__decorate([
+    (0, common_1.Get)("number"),
+    __param(0, (0, core_1.TypedParam)("value", "number", true)),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Object]),
+    __metadata("design:returntype", Promise)
+], ParametersController.prototype, "number", null);
+__decorate([
+    (0, common_1.Get)("string"),
+    __param(0, (0, core_1.TypedParam)("value", "string", false)),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [String]),
+    __metadata("design:returntype", Promise)
+], ParametersController.prototype, "string", null);
+__decorate([
+    (0, common_1.Get)("uuid"),
+    __param(0, (0, core_1.TypedParam)("value", "uuid", false)),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [String]),
+    __metadata("design:returntype", Promise)
+], ParametersController.prototype, "uuid", null);
+ParametersController = __decorate([
+    (0, common_1.Controller)("parameters")
+], ParametersController);
+exports.ParametersController = ParametersController;
+```
+    </Tab>
+</Tabs>
 
-## Not possible
+Just call `@TypedParam()` function on the path paremeter, that's all.
+
+If you want to special parameter type `"uuid"`, write it as the second argument.
+
+When wrong typed value comes, 400 bad request error would be thrown.
+
+
+
+
+## Restriction
+`@TypedParam()` allows only atomic type.
+
+  - `boolean`
+  - `number`
+  - `string`
+  - `uuid`
+
+Also, `@TypedParam()` allows nullable like `number | null`, but undefindable type is not.
+
+  - `number | null` is allowed
+  - `string | undefined` is prohibited
+
+If you violate above condition, and try to declare object or union type, compilation error would be occured:
+
+```bash
+Error on nestia.core.TypedParam(): only atomic type is allowed
+```
