--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -1,6 +1,4 @@
 import { Tabs, Tab } from 'nextra-theme-docs'
-import Alert from '@mui/material/Alert';
-import AlertTitle from '@mui/material/AlertTitle';
 
 # `TypedRoute`
 ## Outline
@@ -234,7 +232,7 @@ exports.BbsArticlesController = BbsArticlesController;
     </Tab>
 </Tabs>
 
-Just call `TypedRoute.${method}()` function on the target method, that's all.
+Just call `@TypedRoute.${method}()` function on the target method, that's all.
 
 `Nestia` will analyze your type (`IBbsArticle`), and writes optimal code for the target type, in the compliation level. If you click the "Compiled JavaScript File" tab of above, you can see the optimal validation and JSON serialization code. 
 
@@ -243,7 +241,7 @@ Such optimization is called AOT (Ahead of Time) compilation, and it is the secre
 
 
 
-## Peformance
+## Benchmark
 ### JSON Serialize
 Comparing JSON serialization speed, [`typia`](https://typia.io/docs/json/stringify) is maximum 200x faster than `class-transformer`.
 
@@ -259,7 +257,7 @@ From above benchmark graph, you can see that `class-transformer` is extremely sl
 
 > Measured on [Intel i5-1135g7, Surface Pro 8](https://github.com/samchon/typia/tree/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz#stringify)
 
-### Server Benchmark
+### Server
 Looking at above benchmark, someone may ask:
 
 > JSON serialization speed affects on the server performance? 
