Writing #313 - Swagger Generator

--- a/website/pages/docs/core/TypedQuery.mdx
+++ b/website/pages/docs/core/TypedQuery.mdx
@@ -15,11 +15,11 @@ It's almost same with original `@Query()` function of `NestJS`, but `@TypedQuery
 While `NestJS` does not support query type validation, `@TypedQuery()` validates the request query type and throws 400 bad request error when mismatched. Also, while `NestJS` does not support property type (`@Query()` only supports `string` typed properties), `@TypedQuery()` can define variable property types like `number` or `boolean`.
 
 <Callout type="info">
-What the query parameter is? 
+**What the query parameter is?**
 
 This is the query parameter!
 
-`name=Samchon&age=20&isMale=true`
+  - `name=Samchon&age=20&sex=male
 </Callout>
 
 
